--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-index.html
+<!DOCTYPE html>
+<html>
+ <head>
+   <title>Owl wikipedia</title>
+ </head>
+  <body>
+   <h1>Owls</h1>
+   <p>
+   Owls are birds from the order Strigiformes, which includes over 200 species of mostly solitary and nocturnal birds of prey typified by an upright stance, a large, broad head, binocular vision, binaural hearing, sharp talons, and feathers adapted for silent flight. Exceptions include the diurnal northern hawk-owl and the gregarious burrowing owl.
+Owls hunt mostly small mammals, insects, and other birds, although a few species specialize in hunting fish. They are found in all regions of the Earth except polar ice caps and some remote islands.
+Owls are divided into two families: the true (or typical) owl family, Strigidae, and the barn-owl family, Tytonidae.
+   </p>
+   
+   <img src="owl.jpeg">
+
+   <p>
+
+   </p>
+   <ol>
+    <li>Anatomy</li>
+    	<ul>1.1	Sexual dimorphism</ul>
+		<ul>1.2	Adaptations for hunting</ul>
+		<ul>1.2.1	Flight and feathers</ul>
+		<ul>1.2.2	Vision</ul>
+		<ul>1.2.3	Hearing</ul>
+		<ul>1.2.4	Talons</ul>
+		<ul>1.2.5	Beak</ul>
+		<ul>1.2.6	Camouflage</ul>
+	</ol>
+	<ol>
+    <li>Behavior</li>
+    	<ul>2.1	Breeding and reproduction</ul>
+    </ol>
+    <ol>
+    <li>Evolution and systematics</li>
+    	<ul>3.1	Ogygoptyngidae</ul>
+		<ul>3.2	Protostrigidae</ul>
+		<ul>3.3	Sophiornithidae</ul>
+		<ul>3.4	The family Tytonidae: barn-owls</ul>
+		<ul>3.5	The family Strigidae: typical owls or true owls</ul>
+	</ol>
+    <ol>
+    <li>Symbolism and mythology</li>
+    	<ul>4.1	African cultures</ul>
+		<ul>4.2	Asia</ul>
+		<ul>4.3	Ancient European and modern Western culture</ul>
+		<ul>4.4	Hinduism</ul>
+		<ul>4.5	Native American cultures</ul>
+	</ol>
+	<ol>
+    
+    <li>Rodent contol</li>
+    <li>Attacks on humans</li>
+    <li>Conservation issues</li>
+    </ol>
+    
+   
+  <img src="owl2.jpg">
+   <h2><strong>Anatomy</strong></h2>
+   <p>
+Owls possess large, forward-facing eyes and ear-holes, a hawk-like beak, a flat face, and usually a conspicuous circle of feathers, a facial disc, around each eye. The feathers making up this disc can be adjusted to sharply focus sounds from varying distances onto the owls' asymmetrically placed ear cavities. Most birds of prey have eyes on the sides of their heads, but the stereoscopic nature of the owl's forward-facing eyes permits the greater sense of depth perception necessary for low-light hunting. Although owls have binocular vision, their large eyes are fixed in their sockets—as are those of most other birds—so they must turn their entire heads to change views. As owls are farsighted, they are unable to clearly see anything within a few centimeters of their eyes. Caught prey can be felt by owls with the use of filoplumes—hairlike feathers on the beak and feet that act as "feelers". Their far vision, particularly in low light, is exceptionally good.
+
+Owls can rotate their heads and necks as much as 270°. Owls have 14 neck vertebrae compared to seven in humans, which makes their necks more flexible. They also have adaptations to their circulatory systems, permitting rotation without cutting off blood to the brain: the foramina in their vertebrae through which the vertebral arteries pass are about 10 times the diameter of the artery, instead of about the same size as the artery as in humans; the vertebral arteries enter the cervical vertebrae higher than in other birds, giving the vessels some slack, and the carotid arteries unite in a very large anastomosis or junction, the largest of any bird's, preventing blood supply from being cut off while they rotate their necks. Other anastomoses between the carotid and vertebral arteries support this effect.[2][3]
+
+The smallest owl—weighing as little as 31 g (1 3⁄32 oz) and measuring some 13.5 cm (5 1⁄4 in)—is the elf owl (Micrathene whitneyi).[4] Around the same diminutive length, although slightly heavier, are the lesser known long-whiskered owlet (Xenoglaux loweryi) and Tamaulipas pygmy owl (Glaucidium sanchezi).[4] The largest owls are two similarly sized eagle owls; the Eurasian eagle-owl (Bubo bubo) and Blakiston's fish owl (Bubo blakistoni). The largest females of these species are 71 cm (28 in) long, have a 190 cm (75 in) wing span, and weigh 4.2 kg (9 1⁄4 lb).[4][5][6][7][8]
+
+Different species of owls produce different sounds; this distribution of calls aids owls in finding mates or announcing their presence to potential competitors, and also aids ornithologists and birders in locating these birds and distinguishing species. As noted above, their facial discs help owls to funnel the sound of prey to their ears. In many species, these discs are placed asymmetrically, for better directional location.
+
+Owl plumage is generally cryptic, although several species have facial and head markings, including face masks, ear tufts, and brightly coloured irises. These markings are generally more common in species inhabiting open habitats, and are thought to be used in signaling with other owls in low-light conditions.[9]
+   </p>
+
+   <p><strong>Sexual dimorphism</strong></p>
+
+   <p><strong>Sexual dimorphism</strong> is a physical difference between males and females of a species. Females owls are typically larger than the males.[10] The degree of size dimorphism varies across multiple populations and species, and is measured through various traits, such as wing span and body mass.[10] Overall, female owls tend to be slightly larger than males. The exact explanation for this development in owls is unknown. However, several theories explain the development of sexual dimorphism in owls.
+
+One theory suggests that selection has led males to be smaller because it allows them to be efficient foragers. The ability to obtain more food is advantageous during breeding season. In some species, female owls stay at their nest with their eggs while it is the responsibility of the male to bring back food to the nest.[11] However, if food is scarce, the male first feeds himself before feeding the female.[12] Small birds, which are agile, are an important source of food for owls. Male burrowing owls have been observed to have longer wing chords than females, despite being smaller than females.[12] Furthermore, owls have been observed to be roughly the same size as their prey.[12] This has also been observed in other predatory birds,[11] which suggests that owls with smaller bodies and long wing chords have been selected for because of the increased agility and speed that allows them to catch their prey.[citation needed]
+
+Another popular theory suggests that females have not been selected to be smaller like male owls because of their sexual roles. In many species, female owls may not leave the nest. Therefore, females may have a larger mass to allow them to go for a longer period of time without starving. For example, one hypothesized sexual role is that larger females are more capable of dismembering prey and feeding it to their young, hence female owls are larger than their male counterparts.[10]
+
+A different theory suggests that the size difference between male and females is due to sexual selection: since large females can choose their mate and may violently reject a male's sexual advances, smaller male owls that have the ability to escape unreceptive females are more likely to have been selected.[12]</p>
+
+<p><strong>Adaptations for hunting</strong></p>
+
+<p>All owls are carnivorous birds of prey and live mainly on a diet of insects and small rodents such as mice, rats, and hares. Some owls are also specifically adapted to hunt fish. They are very adept in hunting in their respective environments. Since owls can be found in nearly all parts of the world and across a multitude of ecosystems, their hunting skills and characteristics vary slightly from species to species, though most characteristics are shared among all species.</p>
+
+<p><strong>Flight and feathers</strong></p>
+
+<p>Most owls share an innate ability to fly almost silently and also more slowly in comparison to other birds of prey. Most owls live a mainly nocturnal lifestyle and being able to fly without making any noise gives them a strong advantage over their prey that are listening for the slightest sound in the night. A silent, slow flight is not as necessary for diurnal and crepuscular owls given that prey can usually see an owl approaching. While the morphological and biological mechanisms of this silent flight are more or less unknown, the structure of the feather has been heavily studied and accredited to a large portion of why they have this ability. Owls’ feathers are generally larger than the average birds’ feathers, have fewer radiates, longer pennulum, and achieve smooth edges with different rachis structures.[13] Serrated edges along the owl's remiges bring the flapping of the wing down to a nearly silent mechanism. The serrations are more likely reducing aerodynamic disturbances, rather than simply reducing noise.[13] The surface of the flight feathers is covered with a velvety structure that absorbs the sound of the wing moving. These unique structures reduce noise frequencies above 2 kHz,[14] making the sound level emitted drop below the typical hearing spectrum of the owl's usual prey[14][15] and also within the owl's own best hearing range.[16][17] This optimizes the owl's ability to silently fly to capture prey without the prey hearing the owl first as it flies in. It also allows the owl to monitor the sound output from its flight pattern.
+Great horned owl with wet feathers, waiting out a rainstorm. The feather adaption that allows silent flight means that barn owl feathers are not waterproof. To retain the softness and silent flight, the barn owl cannot use the preen oil or powder dust that other species use for waterproofing. In wet weather, they cannot hunt and this may be disastrous during the breeding season. Barn owls are frequently found drowned in cattle drinking troughs, since they land to drink and bathe, but are unable to climb out. Owls can struggle to keep warm, because of their lack of waterproofing, so large numbers of downy feathers help them to retain body heat.</p>
+  </body>
+</html>
